# Genie

./: .gitignore  =7.4.0  PHASE_1_2_COMPLETE_CODE.md  PHASE_1_2_COMPLETE_CODE.txt  README.md  baseline_no_colocation.json  build_data_plane.sh  demo_output.txt  genie_gpu_testing_report.md  lazy_tensor_output.txt  optimized_with_colocation.json  real_network_baseline.json  real_network_optimized.json  requirements-dev.txt  requirements.txt  setup.py  simulation_vs_real_validation_report.txt  test_hybrid_graph_builder.py  test_transparency.py  test_unified_interface.py
.kiro/: HotNets25.tex
.kiro/specs/: DOCUMENT-RESTRUCTURE-SUMMARY.md  architecture.md
Evaluation/: README.md  REMOTE_EXECUTION_STATUS.md  __init__.py
Evaluation/common/: __init__.py  djinn_init.py  djinn_remote.py  experiment_runner.py  generate_figures.py  gpu.py  metrics.py  workloads.py
Evaluation/exp2_1_llm_decode/: README.md
Evaluation/exp2_2_streaming_audio/: README.md
Evaluation/exp2_3_conversation/: README.md
Evaluation/exp3_1_ablation/: README.md
Evaluation/exp3_2_memory_kernel/: README.md
Evaluation/exp4_1_scalability/: README.md
Evaluation/exp4_2_qos/: README.md
Evaluation/exp5_1_overhead/: README.md
Evaluation/exp6_1_generality/: README.md
Evaluation/phase4_load_test/: README.md
benchmarks/: README.md  README_FINAL.md  __init__.py  baseline_no_colocation.json  compare_results.py  compare_simulation_vs_real.py  comprehensive_evaluation.py  continuous_llm_serving.py  diagnostic_profiler.py  end_to_end_remote_execution.py  framework.py  llama_7b_unified_final.py  measure_baseline_llm.py  measure_optimized_llm.py  measure_real_network_llm.py  multi_node_simulation.py  multi_tenant_real.py  network_efficiency_validation.py  optimized_with_colocation.json  ray_vs_genie_comparison.py  real_workload_benchmarks.py  realistic_evaluation.py  semantic_validation_real_workloads.py  sustained_execution.py  sustained_execution_real.py  test_lazy_pattern_matching.py  test_metadata_parallelization.py  test_p1_optimizations.py  test_phase3_decode_optimization.py  test_phase4_monitoring.py  test_shape_cache.py  validate_enhancements.py  validate_p1_on_realistic.py  validate_p1_robust.py  verify_phase2_complete.py  week1_genie_profiler.py  week1_profiler.py  week2_semantic_validator.py  week3_materialization_validation.py
benchmarks/baselines/: __init__.py  djinn_full_semantics.py  genie_capture_only.py  genie_full_semantics.py  genie_local_remote.py  genie_no_semantics.py  local_pytorch.py  naive_disaggregation.py  pytorch_rpc.py  ray_baseline.py  vanilla_pytorch_benchmarks.py
benchmarks/core/: continuous_llm_serving.py  llama_7b_unified_final.py  multi_tenant_real.py  ray_vs_genie_comparison.py
benchmarks/profiling/: README.md  comprehensive_system_profiler.py  comprehensive_workload_comparison.py  djinn_v2_3_profiler.py  network_breakdown_profiler.py  real_djinn_profiler.py  real_djinn_profiler_redesigned.py  reconcile_network_measurements.py  vanilla_pytorch_profiler.py
benchmarks/scripts/: README.md  (+3 more)
djinn/: __init__.py  config.example.yaml  config.py  version_validator.py
docs/: 0_OVERVIEW.md  1_ARCHITECTURE.md  2_FRONTEND_IMPLEMENTATION.md  3_SCHEDULER_IMPLEMENTATION.md  4_BACKEND_IMPLEMENTATION.md  ARCHITECTURE_FAQ.md  EVALUATION_WEEK2.md  EVALUATION_WEEK3.md  EvaluationPlan.md  FRONTEND_ARCHITECTURE.md  SCHEDULER_ARCHITECTURE.md  WEEK2_RESULTS_SUMMARY.md  WEEK3_QUICK_START.md  enhancement_plan.md  remaining_enhancement_plan.md  research_proposal.tex  rtx5060-support.md
documents/: AI-ASSISTANT-GUIDE.md  ENHANCEMENT-ROADMAP.md  Genie_2.0_plan.md  genie-context.md  interface-contracts.md  version.md
example/: README.md  comprehensive_correctness_test.py  correctness_validation.py  genie_showcase.py  perf_compare.py  quick_demo.py  resnet18_demo.py  simple_correctness_test.py  transfer_demo.py
examples/: multi_node_test.py  simple_llm.py  simple_remote_demo.py  test_simple_llm.py
genie/: __init__.py  config.py  version_validator.py
scripts/: README.md  README_SETUP.md  install_mlnx_ofed.sh  install_nvidia_peermem_direct.sh  install_peermem.sh  run_gpu_dev_test.sh  setup_gpudirect_rdma_ultimate.sh  week1_README_MULTI_NODE_TESTING.md  week1_README_TEST_EXECUTION.md  week1_client_tests.sh  week1_comprehensive_tests.sh  week1_parse_results.py  week1_server_tests.sh  week1_test_connectivity.sh
src/data_plane/: CMakeLists.txt  genie_c_api.cpp  genie_data_plane.cpp  genie_data_plane.hpp  genie_data_plane_enhanced.cpp  genie_data_plane_factory.cpp  genie_dpdk_thread_model.cpp  genie_dpdk_thread_model.hpp  genie_extbuf_tx.cpp  genie_kcp_wrapper.cpp  genie_kcp_wrapper.hpp  genie_monitoring.cpp  genie_monitoring.hpp  genie_performance_tuning.cpp  genie_performance_tuning.hpp  genie_transport.cpp  genie_transport.hpp  genie_zero_copy_rx.cpp  genie_zero_copy_transport.cpp  genie_zero_copy_transport.hpp  spdk_dma.cpp  spdk_dma.hpp  test_data_plane.cpp  test_dpdk_simple.cpp  test_dpdk_threading.cpp
test_data/: result_relu.pt  test_tensor.pt
tests/: README_GPU_TESTS.md  benchmarks.py  conftest.py  demo_gpu_execution.py  demo_phase2_zerocopy.py  test_analyzer_confidence.py  test_analyzer_guardrails.py  test_analyzer_plan_stub.py  test_analyzer_smoke.py  test_async_transport.py  test_batch_protocol.py  test_batching_coordinator.py  test_cluster_init.py  test_cluster_node_info.py  test_colocation.py  test_connection_pool.py  test_control_data_integration.py  test_control_server.py  test_device_registration.py  test_dpdk_backend_plan.py  test_dpdk_backend_register.py  test_dpdk_backend_scheduler.py  test_dpdk_bindings.py  test_dynamo_patterns.py  test_enhanced_dispatcher.py  test_enhanced_metadata.py  test_error_handling_integration.py  test_exceptions.py  test_exceptions_simple.py  test_executor_fallback.py  test_exit_criteria.py  test_fx_analyzer_profile.py  test_fx_graph_adapter.py  test_fx_migration.py  test_gpu_cache_enhancements.py  test_gpu_direct_zero_copy.py  test_gpu_execution.py  test_gpu_memory.py  test_gpu_simple.py  test_graph_cache_improvements.py  (+43 more)
tools/: tcp_receiver.py
(+609 files in other folders)
